cocktail/css/main.css
@import url(https://fonts.googleapis.com/css?family=Roboto:300);
* {
	overflow: hidden !important;
}

h2 {
	font-size: 22px !important;
	line-height: normal !imporant;
}

body {
	margin: 0;
}

html {
	background-color: black;
	font-family: 'Open Sans';
	/* gil sans */
	overflow: hidden;
	color: white;
}

div {
	position: absolute;
}

.sweet-alert p {
	position: absolute !important;
	left: 38.5%;
	top: 65%;
}

.sweet-alert button {
	margin: 0;
	margin-bottom: 10%;
}

.sa-button-container {
	left: 33%;
}

#drinktitle_container {
	font-size: 1.2em;
	line-height: 1.2;
	padding-bottom: 1em;
	letter-spacing: 0px;
	word-wrap: break-word;
	top: 27%;
	left: 4%;
	height: 15px;
	text-align: center;
	width: 90%;
	z-index: 2;
	overflow: visible;
	color: rgb(255, 255, 255);
	opacity: 1;
	letter-spacing: .08em;
}

#question {
	font-family: 'Roboto', sans-serif;
	color: rgb(255, 255, 255);
	font-size: 1.95em;
	letter-spacing: .03em;
	word-wrap: break-word;
	top: 11.5%;
	width: 92%;
	left: 2%;
	text-align: center;
	z-index: 5;
	overflow: visible;
	opacity: .9;
}

#shaker {
	position:absolute;
	left: 26%;
	top:33%;
	height: 58%;
	width: 49%;
	background-image: url('../bevshaker.png');
	z-index: 4;
	-webkit-background-size: 100%;
	overflow: visible;
	opacity: 1;
	background-repeat: no-repeat no-repeat;
}

#shakercontainer {
	height: 100%;
	z-index: 4;
	width: 100%;
	-webkit-background-size: 100%;
	overflow: visible;
	opacity: 1;
	background-repeat: no-repeat no-repeat;
	align-content: center;
}

#timer {
	left: 42%;
	font-size: 1em;
	top: 6%;
	width: 15%;
	display: none;
}


@media screen and (max-width: 320px) {
	#drinktitle_container {
		font-size: .85em;
		top: 23%;
	}
	#question {
		top: 10%;
	}

}

